[tool.poetry]
name = "tinybin"
version = "0.3.0"
description = ""
authors = ["megahomyak <g.megahomyak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.108.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
